--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  height: 100vh;
-  display: grid;
-  place-content: center;
-  width: 100%;
+@layer base {
+  body {
+    height: 100vh;
+    display: grid;
+    place-content: center;
+    width: 100%;
+  }
 }
